# my-dashboard

./: .gitattributes  .gitignore  README.md  apply.js  curr.diff  f.js  fix.js  fix_renderer.py  fix_terminal_js.js  fix_test.js  forge.config.js  package-lock.json  package.json  patch.js  patch.py  patch2.py  patch3.js  patch_preload.js  patch_renderer.js  payload.txt  scratch_ojoDeDios_HEAD.js  temp_renderer.js  temp_renderer2.js  test-wiz.js  test.bat  test.js  test2.js  test_script.js  test_script2.js  test_script3.js  test_start.js  test_wiztree.csv  w.py  w2.py  write_style.js
mis_scripts/: Adblock.py  Cazador_Intrusos.py  Descargador_Maestro.py  Desinstalador_Telemetria.bat  Despertar_Nucleos.bat  Destructor_metadatos.py  Duplicados.py  Good_mode.bat  Inyector_Menu.bat  Lanzador_Cloud_Gaming.bat  MAC_Spoofer.py  Optimizador_Red.bat  Organizador.py  PC.bat  Purgador_Shaders.py  Purgar_ram.py  README.md  Salud_Disco.bat  Servidor_Descargar.py  Spicetify.bat  activar_windows.bat  actualizar_apps.bat  buscar_duplicados.py  cifrador_carpetas.py  cloud_gaming.bat  descifrador_carpetas.py  eliminar_bloatware.bat  eliminar_telemetria.bat  instalar_spicetify.bat  limpiar_pc.bat  modo_gaming.bat  optimizar_ping.py  optimizar_red.bat  organizador_archivos.py  purgar_shaders.py  revisor_puertos.py  servidor_descargas.py
native_modules/mft_reader/: Cargo.toml  README.md
native_modules/mft_reader/src/: main.rs
scripts/: verify-build-prereqs.js
src/: clean_preload.py  index.html  index.html.bak  main.backup.js  main.js  preload.js  r.py  radar.css  renderer.js  style.css  (+3 more)
(+80 files in other folders)
