[package]
name = "mft_reader"
version = "0.1.0"
edition = "2021"
description = "NTFS MFT scanner for Horus Engine"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
